--- a/src/Components/Checkbox/Checkbox.module.css
+++ b/src/Components/Checkbox/Checkbox.module.css
@@ -4,11 +4,12 @@
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 16px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  text-align: start;
 }
 
 /* Hide the browser's default checkbox */
